--- a/lang/ar.json
+++ b/lang/ar.json
@@ -10,6 +10,8 @@
     "website url": "رابط الموقع",
     "instagram": "إنستجرام",
     "facebook": "فيسبوك",
+    "Subscription pop up duration": " مدة اظهار نافذة منبثقة اشترك معنا",
+    "Subscribe Uses": "اشترك معنا",
     "tiktok": "تيك توك",
     "snapchat": "سناب شات",
     "youtube": "يوتيوب",
